{
    "name": "InputActions",
    "maps": [
        {
            "name": "player",
            "id": "a932d5f2-b3fe-449d-b44f-b194fb09aab0",
            "actions": [
                {
                    "name": "mousePosition",
                    "type": "PassThrough",
                    "id": "9b417435-0d78-46ba-b270-70ef5eb8339b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mouseClick",
                    "type": "PassThrough",
                    "id": "97a4f1ba-c94f-4882-8e5b-8f0b2725df04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b12444a3-0a94-4ea4-83c2-0a04df9f392c",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c43d69c4-2cad-4f30-b098-7cdcb2d329e7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "mouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}